<resources>
    <string name="app_name">MessengerApp</string>
    <string name="profile_image">profile image</string>
    <string name="search">Search</string>
    <string name="fab">fab</string>
    <string name="update">Update</string>
    <string name="log_out">Log Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="what_i_do">What I do</string>
    <string name="not_registered">Not registered?</string>
    <string name="message">Message</string>
    <string name="occupation">Manager</string>
    <string name="fabHome">fab</string>
    <string name="back_button_search">backButtonSearch</string>
    <string name="message_example">გამარჯობა, როგორ ხარ? </string>
    <string name="time_example">02:47</string>
</resources>