<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">


    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="@dimen/profile_image_res_large"
        android:layout_height="@dimen/profile_image_res_large"
        android:layout_marginTop="@dimen/profile_image_res_top_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar_image_placeholder" />
    <EditText
        style="@style/login_edit_text"
        android:background="@drawable/rounded_edit_text_profile"
        android:id="@+id/txt_email"
        android:hint="@string/enter_your_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/txt_top_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_profile" />

    <EditText
        style="@style/login_edit_text"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edit_text_profile"
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        app:layout_constraintTop_toBottomOf="@+id/txt_email"
        tools:layout_editor_absoluteX="16dp" />
    <EditText
        android:id="@+id/txt_occupation"
        style="@style/login_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:background="@drawable/rounded_edit_text_profile"
        android:hint="@string/what_i_do"
        app:layout_constraintTop_toBottomOf="@+id/txt_password"
        tools:layout_editor_absoluteX="16dp" />
    <ProgressBar
        android:id="@+id/sign_up_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_occupation" />
    <Button
        android:id="@+id/btn_sign_up"
        style="Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/theme_blue"
        android:text="@string/sign_up"
        android:textSize="@dimen/card_text_size_large"
        android:onClick="actvitySignUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_occupation" />


</androidx.constraintlayout.widget.ConstraintLayout>