<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


    </data>



    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfilePage">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/profile_constraint_layout">

            <ImageView android:layout_height="@dimen/profile_image_res_large"
                android:id="@+id/profile_image_large"
                android:layout_width="@dimen/profile_image_res_large"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/profile_image_res_top_margin"
                android:src="@drawable/avatar_image_placeholder"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:contentDescription="@string/profile_image">
            </ImageView>

            <EditText
                android:id="@+id/edit_text_nickname"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="@dimen/edit_text_height"
                app:layout_constraintTop_toBottomOf="@id/profile_image_large"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="@dimen/edit_text_height"
                tools:text="Giorgi"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_profile"
                android:autofillHints="Giorgi"
                android:inputType="text"
                tools:ignore="LabelFor"
                android:background="@drawable/rounded_edit_text_profile"
                android:textColor="@color/edit_text_color">

            </EditText>

            <EditText
                android:id="@+id/edit_text_occupation"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="@dimen/edit_text_height"
                app:layout_constraintTop_toBottomOf="@id/edit_text_nickname"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="@dimen/edit_text_margin"
                tools:text="Dev"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_profile"
                android:autofillHints="Dev"
                android:inputType="text"
                tools:ignore="LabelFor"
                android:background="@drawable/rounded_edit_text_profile"
                android:textColor="@color/edit_text_color">

            </EditText>
            
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/update_button"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/edit_text_height"
                app:layout_constraintTop_toBottomOf="@id/edit_text_occupation"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@drawable/button_profile"
                android:textColor="@color/white"
                android:text="@string/update"
                android:textSize="@dimen/text_size_profile"
                android:textAllCaps="false"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sign_out_button"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/edit_text_margin"
                app:layout_constraintTop_toBottomOf="@id/update_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@drawable/sign_out_button"
                android:textColor="@color/edit_text_color"
                android:text="@string/log_out"
                android:textSize="@dimen/text_size_profile"
                />








        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:hideOnScroll="true"
            android:backgroundTint="@android:color/white"
            android:backgroundTintMode="src_over"

            app:fabCradleRoundedCornerRadius="@dimen/fab_cradle"
            app:fabAlignmentMode="center"
            app:fabCradleVerticalOffset="@dimen/fab_cradle"
            app:fabCradleMargin="@dimen/fab_cradle"


            >

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomAppNav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:menu="@menu/bottom_menu_nav"
                android:layout_gravity="center"
                app:labelVisibilityMode="unlabeled"
                android:layout_marginEnd="@dimen/nav_bar_margin"
                android:background="@android:color/transparent"

                app:itemIconTint="@color/menu_item_color"
                app:itemTextColor="@color/menu_item_color"


                />

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_add_24"
            android:backgroundTint="@color/theme_blue"
            app:layout_anchor="@id/bottomAppBar"
            app:fabSize="normal"
            android:contentDescription="@string/fab">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>